syntax = "proto3";

package admiral.healthcheck.v1;

import "google/api/annotations.proto";

import "common/v1/annotations.proto";

service HealthcheckAPI {
  rpc Healthcheck(HealthcheckRequest) returns (HealthcheckResponse) {
    option (google.api.http) = {
      get: "/api/v1/healthcheck"
      additional_bindings: {get: "/healthz"}
    };
    option (admiral.common.v1.action).type = READ;
    option (admiral.common.v1.disable_audit) = true;
  }
}

message HealthcheckRequest {}
message HealthcheckResponse {}
